// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Задана опция searchNavigationMode: "expand" При смене корня в режиме поиска, узел должен раскрываться 1`] = `
<div
  class="controls_list_theme-default controls-Explorer"
  data-qa="js-demo-explorer-data-qa"
  tabindex="0"
>
  <div
    class="controls-Explorer__wrapper"
    tabindex="0"
  >
    <div
      style="display: none;"
      tabindex="0"
    />
    <div
      class="controls-BaseControl controls_list_theme-default controls_toggle_theme-default controls-Explorer__view"
      data-qa="list"
      tabindex="0"
    >
      <div
        class="controls-BaseControl__fakeFocusElem"
        name="fakeFocusElem"
        tabindex="0"
      />
      <style
        data-vdom-ignore="true"
        name="itemActionsOutsideStyle"
      />
      <div
        class="controls-BaseControl__viewContainer controls-BaseControl__View_uniqueId2 controls-GridControl__viewContainer"
        name="viewContainer"
        tabindex="0"
      >
        <div
          class="tw-grid tw-w-full tw-relative controls-Grid controls-Grid_default controls-itemActionsV_menu-hidden"
          data-qa="gridWrapper"
          style="grid-template-columns: 1fr;"
          tabindex="0"
        >
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-top"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-top controls-BaseControl__loadingIndicator__position-top controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_top"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-top"
            data-qa="loading-trigger-top"
            style="top: 1px;"
          />
          <div
            class="tw-contents controls-Grid__itemsContainer controls-BaseControl_showActions_onhover controls-BaseControl_hover_enabled controls-BaseControl__itemsContainer_uniqueId2"
            data-qa="items-container"
          >
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-fontsize-treeGrid_node_default controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="js-controls-Tree__row-expander controls-TreeGrid__row-expander controls-cursor_pointer js-controls-ListView__notEditable controls-TreeGrid__row_default-expander_size_default tw-inline-flex tw-items-center tw-flex-shrink-0 tw-justify-center controls-TreeGrid__row-expander_node_default_position_default controls-TreeGrid__row-expander_node_default controls-TreeGrid__row-expander_node_iconSize_default controls-TreeGrid__row-expander_node_iconStyle_default controls-TreeGrid__row-expander_expanded controls-TreeGrid__row-expander_node_default_expanded"
                    data-qa="row-expander"
                    tabindex="-1"
                  />
                </div>
                Москва и Московская обл.
              </div>
            </div>
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_1"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-fontsize-treeGrid_node_default controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="tw-flex-shrink-0 tw-inline-block controls-TreeGrid__row-levelPadding_size_default"
                  />
                  <div
                    class="js-controls-Tree__row-expander controls-TreeGrid__row-expander controls-cursor_pointer js-controls-ListView__notEditable controls-TreeGrid__row_default-expander_size_default tw-inline-flex tw-items-center tw-flex-shrink-0 tw-justify-center controls-TreeGrid__row-expander_node_default_position_default controls-TreeGrid__row-expander_node_default controls-TreeGrid__row-expander_node_iconSize_default controls-TreeGrid__row-expander_node_iconStyle_default controls-TreeGrid__row-expander_collapsed controls-TreeGrid__row-expander_node_default_collapsed"
                    data-qa="row-expander"
                    tabindex="-1"
                  />
                </div>
                Москва
              </div>
            </div>
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_2"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="tw-flex-shrink-0 tw-inline-block controls-TreeGrid__row-levelPadding_size_default"
                  />
                  <div
                    class="controls-Tree__row-expanderPadding tw-flex-shrink-0 tw-invisible controls-TreeGrid__row-expanderPadding_size_default js-controls-ListView__notEditable"
                  />
                </div>
                Абрамцево
              </div>
            </div>
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="2"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-fontsize-treeGrid_node_default controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="js-controls-Tree__row-expander controls-TreeGrid__row-expander controls-cursor_pointer js-controls-ListView__notEditable controls-TreeGrid__row_default-expander_size_default tw-inline-flex tw-items-center tw-flex-shrink-0 tw-justify-center controls-TreeGrid__row-expander_node_default_position_default controls-TreeGrid__row-expander_node_default controls-TreeGrid__row-expander_node_iconSize_default controls-TreeGrid__row-expander_node_iconStyle_default controls-TreeGrid__row-expander_collapsed controls-TreeGrid__row-expander_node_default_collapsed"
                    data-qa="row-expander"
                    tabindex="-1"
                  />
                </div>
                Санкт-Петербург и область
              </div>
            </div>
          </div>
          
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-bottom"
            data-qa="loading-trigger-bottom"
            style="bottom: 1px;"
          />
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-bottom"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-bottom controls-BaseControl__loadingIndicator__position-bottom controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_bottom"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-contents"
        />
        <div
          class="controls__BaseControl__footer"
          tabindex="0"
        />
        <invisible-node
          class="ws-hidden"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
  <div
    tabindex="0"
  />
  <invisible-node
    class="ws-hidden"
    tabindex="-1"
  />
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Задана опция searchNavigationMode: "expand" При смене корня в режиме поиска, узел должен раскрываться 2`] = `
Array [
  Array [
    	- searchValue: '' -> 'Москва и Московская обл.',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- viewMode: 'table' -> 'search',
    	- expandedItems: {"from":[]} -> {"to":[]},
    	- filter: {"from":{}} -> {"to":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}},
    	- previousViewMode: undefined -> 'table',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/treeGrid:TreeGridCollection' -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- viewCommands: {"from":["resetScroll"]} -> {"to":["resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- root: null -> null,
    		root: null,
    			root: '1',
    				root: null,
    	- markedKey: undefined -> null,
    	- listCommandsSelection: {"from":"undefined"} -> {"to":{"selected":[],"excluded":[]}},
    		listCommandsSelection: undefined,
    			listCommandsSelection: {"selected":[],"excluded":[]},
    				listCommandsSelection: {"selected":[],"excluded":[]},
    	- expandedItems: {"from":[]} -> {"to":["1"]},
    	- filter: {"from":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}} -> {"to":{}},
    		filter: {"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"},
    			filter: {},
    				filter: {},
    	- searchValue: 'Москва и Московская обл.' -> '',
    	- searchInputValue: 'Москва и Московская обл.' -> '',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":["resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll"]},
    	- viewMode: 'search' -> 'table',
    	- hasMoreStorage: {"from":{}} -> {"to":{"1":{"forward":false,"backward":false}}},
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/searchBreadcrumbsGrid:SearchGridCollection' -> 'Controls/treeGrid:TreeGridCollection',
    	- viewCommands: {"from":["resetScroll","resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Задана опция searchStartingWith: "root" Можно менять корень 1`] = `
<div
  class="controls_list_theme-default controls-Explorer"
  data-qa="js-demo-explorer-data-qa"
  tabindex="0"
>
  <div
    class="controls-Explorer__wrapper"
    tabindex="0"
  >
    <div
      class="controls-Explorer__HeadingPathWrapper"
      tabindex="0"
    >
      <div
        class="controls-StickyBlock  controls-background-default-sticky controls-Explorer__HeadingPath-undefined"
        style="left: 0px; max-width: calc(100%);"
      >
        <div
          class="controls-Explorer__PathWrapper controls_toggle_theme-default controls-StickyBlock__content"
          tabindex="0"
        >
          <div
            class="controls-BreadCrumbsPath controls_breadcrumbs_theme-default controls-Explorer__Path"
            data-qa="controls-BreadCrumbsPath"
            tabindex="0"
          >
            <div
              class="controls-BreadCrumbsPath__wrapper"
            >
              <div
                class="controls_breadcrumbs_theme-default controls-BreadCrumbsPath__backButton__wrapper controls-BreadCrumbsPath__backButton__wrapper__only"
                data-qa="controls-BreadCrumbsBackButton"
                tabindex="0"
              >
                <div
                  class="controls-BreadCrumbsPath__backButton__container"
                >
                  <div
                    class="controls-Back controls-BreadCrumbsPath__backButton"
                    tabindex="0"
                    title="Москва и Московская обл."
                  >
                    <div
                      class="controls-Back__wrapper controls-Back__wrapper_iconViewMode-default controls-fontsize-headingPathBack"
                    >
                      <div
                        class="controls-Back__icon-wrapper  ws-align-items-center"
                      >
                        <div
                          class="controls-Back__icon_view-default"
                          data-qa="controls-Back_arrow"
                        >
                          <svg
                            class="controls-padding_right-s controls-Explorer__HeadingPath-IconBack-height controls-margin_left-2xs controls-Back__icon_style-primary"
                            style="enable-background: new 0 0 9 20;"
                            tabindex="0"
                            viewBox="0 0 9 20"
                            xml:space="preserve"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M6.87828 3.5L9 5.15195L3.54204 11.5L9 17.848L6.87828 19.5L0 11.5L6.87828 3.5Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="controls-Back__caption controls-Back__caption_style-default controls-Back__caption_overflow-ellipsis"
                      >
                        Москва и Московская обл.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="controls-BaseControl controls_list_theme-default controls_toggle_theme-default controls-Explorer__view"
      data-qa="list"
      tabindex="0"
    >
      <div
        class="controls-BaseControl__fakeFocusElem"
        name="fakeFocusElem"
        tabindex="0"
      />
      <style
        data-vdom-ignore="true"
        name="itemActionsOutsideStyle"
      />
      <div
        class="controls-BaseControl__viewContainer controls-BaseControl__View_uniqueId2 controls-GridControl__viewContainer"
        name="viewContainer"
        tabindex="0"
      >
        <div
          class="tw-grid tw-w-full tw-relative controls-Grid controls-Grid_default controls-itemActionsV_menu-hidden"
          data-qa="gridWrapper"
          style="grid-template-columns: 1fr;"
          tabindex="0"
        >
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-top"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-top controls-BaseControl__loadingIndicator__position-top controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_top"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-top"
            data-qa="loading-trigger-top"
            style="top: 1px;"
          />
          <div
            class="tw-contents controls-Grid__itemsContainer controls-BaseControl_showActions_onhover controls-BaseControl_hover_enabled controls-BaseControl__itemsContainer_uniqueId2"
            data-qa="items-container"
          >
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_1"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-fontsize-treeGrid_node_default controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="js-controls-Tree__row-expander controls-TreeGrid__row-expander controls-cursor_pointer js-controls-ListView__notEditable controls-TreeGrid__row_default-expander_size_default tw-inline-flex tw-items-center tw-flex-shrink-0 tw-justify-center controls-TreeGrid__row-expander_node_default_position_default controls-TreeGrid__row-expander_node_default controls-TreeGrid__row-expander_node_iconSize_default controls-TreeGrid__row-expander_node_iconStyle_default controls-TreeGrid__row-expander_collapsed controls-TreeGrid__row-expander_node_default_collapsed"
                    data-qa="row-expander"
                    tabindex="-1"
                  />
                </div>
                Москва
              </div>
            </div>
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_2"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="controls-Tree__row-expanderPadding tw-flex-shrink-0 tw-invisible controls-TreeGrid__row-expanderPadding_size_default js-controls-ListView__notEditable"
                  />
                </div>
                Абрамцево
              </div>
            </div>
          </div>
          
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-bottom"
            data-qa="loading-trigger-bottom"
            style="bottom: 1px;"
          />
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-bottom"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-bottom controls-BaseControl__loadingIndicator__position-bottom controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_bottom"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-contents"
        />
        <div
          class="controls__BaseControl__footer"
          tabindex="0"
        />
        <invisible-node
          class="ws-hidden"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
  <div
    tabindex="0"
  />
  <invisible-node
    class="ws-hidden"
    tabindex="-1"
  />
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Задана опция searchStartingWith: "root" Можно менять корень 2`] = `
Array [
  Array [
    	- searchValue: '' -> 'Москва и Московская обл.',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- viewMode: 'table' -> 'search',
    	- expandedItems: {"from":[]} -> {"to":[]},
    	- filter: {"from":{}} -> {"to":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}},
    	- previousViewMode: undefined -> 'table',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/treeGrid:TreeGridCollection' -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- viewCommands: {"from":["resetScroll"]} -> {"to":["resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- root: null -> '1',
    	- markedKey: undefined -> null,
    	- listCommandsSelection: {"from":"undefined"} -> {"to":{"selected":[],"excluded":[]}},
    		listCommandsSelection: undefined,
    			listCommandsSelection: {"selected":[],"excluded":[]},
    				listCommandsSelection: {"selected":[],"excluded":[]},
    	- filter: {"from":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}} -> {"to":{}},
    		filter: {"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"},
    			filter: {},
    				filter: {},
    	- searchValue: 'Москва и Московская обл.' -> '',
    	- searchInputValue: 'Москва и Московская обл.' -> '',
    	- expandedItems: {"from":[]} -> {"to":[]},
    		expandedItems: [],
    			expandedItems: [],
    				expandedItems: [],
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewMode: 'search' -> 'table',
    	- breadCrumbsItems: {"from":null} -> {"to":[{"$serialized$":"inst","module":"Types/entity:Model","id":16,"state":{"$options":{"state":"Unchanged","adapter":{"$serialized$":"inst","module":"Types/entity:adapter.Json","id":17,"state":{"$options":{}}},"rawData":{"key":"1","title":"Москва и Московская обл.","parent":null,"node":true},"keyProperty":"key"},"_changedFields":{},"_instanceId":"client-model-10","_isDeleted":false}}]},
    	- backButtonCaption: '' -> 'Москва и Московская обл.',
    	- activeElement: '1' -> '1_1',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/searchBreadcrumbsGrid:SearchGridCollection' -> 'Controls/treeGrid:TreeGridCollection',
    	- viewCommands: {"from":["resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Поддержка прикладных возможностей Прикладник может сохранить поисковое значение при смене корня иерархии 1`] = `
<div
  data-qa="js-demo-search-input-data-qa"
>
  <div
    class="controls-Render js-controls-Render  controls-Render_background-same controls-Render_textAlign-left controls-Render_search_borderRadius controls-Render_state-search-valid controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-search-valid_caretEmpty controls-inlineheight-default controls-Render-inlineheight-default  controls-search controls_search_theme-default controls-notFocusOnEnter "
    tabindex="0"
    title=""
  >
    <div
      class="controls-Render__wrapper"
    >
      <span
        class="controls-Render__baseline"
      >
        ﻿
      </span>
      <div
        class="controls_search_theme-default controls-Search__buttons controls-Search__buttons-leftTemplate"
      />
      <div
        class="controls-InputBase__field controls-Search__field_margin-null controls-Search__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
        data-qa="controls-Render__field"
      >
        <input
          autocapitalize="on"
          autocomplete="off"
          class="controls-Field js-controls-Field controls-InputBase__nativeField controls-Search__nativeField_caretEmpty controls-Search__nativeField_caretEmpty_theme_default"
          inputmode="text"
          name="ws-input_2000-01-01"
          spellcheck="true"
          tabindex="0"
          type="text"
          value="Санкт-Петербург"
        />
        <div
          class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
        >
          <div
            class="controls-Render__placeholder controls-Render__placeholder_overflow"
          >
            Найти
          </div>
        </div>
      </div>
      <div
        class="controls_search_theme-default controls-Search__buttons controls-Search__buttons-rightTemplate"
      >
        <div
          class="controls-Search__button
                            
                            controls-Search__button_enabled
                            controls-Search__resetButton
                            controls-Search__resetButton_position
                            controls-Search__resetButton_color icon-Close"
          data-qa="Search__resetButton"
          title="Очистить"
          ws-no-focus="true"
        />
        <div
          class="
                    controls_search_theme-default controls-Search__button
                    controls-Search__button_enabled
                    controls-Search__searchButton
                    controls-Search__searchButton_iconSize-s
                    controls-Search__searchButton-right_inlineheight-default
                    controls-Search__searchButton_position-right
                    controls-Search__searchButton_color
                    icon-Search2
                    undefined"
          data-qa="Search__searchButton"
          ws-no-focus="true"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Поддержка прикладных возможностей Прикладник может сохранить поисковое значение при смене корня иерархии 2`] = `
Array [
  Array [
    	- collection: undefined -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- root: null -> '1',
    	- markedKey: undefined -> null,
    	- listCommandsSelection: {"from":"undefined"} -> {"to":{"selected":[],"excluded":[]}},
    		listCommandsSelection: undefined,
    			listCommandsSelection: {"selected":[],"excluded":[]},
    				listCommandsSelection: {"selected":[],"excluded":[]},
    	- filter: {"from":{"title":"Санкт-Петербург","Разворот":"С разворотом","usePages":"full"}} -> {"to":{"title":"Санкт-Петербург","parent":"1","Разворот":"С разворотом","usePages":"full"}},
    		filter: {"title":"Санкт-Петербург","Разворот":"С разворотом","usePages":"full"},
    			filter: {},
    				filter: {"title":"Санкт-Петербург","parent":"1","Разворот":"С разворотом","usePages":"full"},
    	- searchValue: 'Санкт-Петербург' -> 'Санкт-Петербург',
    		searchValue: 'Санкт-Петербург',
    			searchValue: '',
    				searchValue: 'Санкт-Петербург',
    	- searchInputValue: 'Санкт-Петербург' -> 'Санкт-Петербург',
    		searchInputValue: 'Санкт-Петербург',
    			searchInputValue: '',
    				searchInputValue: 'Санкт-Петербург',
    	- expandedItems: {"from":[]} -> {"to":[]},
    		expandedItems: [],
    			expandedItems: [],
    				expandedItems: [],
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- breadCrumbsItems: {"from":null} -> {"to":[{"$serialized$":"inst","module":"Types/entity:Model","id":21,"state":{"$options":{"state":"Unchanged","adapter":{"$serialized$":"inst","module":"Types/entity:adapter.Json","id":22,"state":{"$options":{}}},"rawData":{"key":"1","title":"Москва и Московская обл.","parent":null,"node":true},"keyProperty":"key"},"_changedFields":{},"_instanceId":"client-model-14","_isDeleted":false}}]},
    	- backButtonCaption: '' -> 'Москва и Московская обл.',
    	- activeElement: '2' -> '1_1',
    	- previousViewMode: undefined -> 'search',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. При поиске узлы должны сворачиваться, если не задана опция deepReload 1`] = `
<div
  class="controls_list_theme-default controls-Explorer"
  data-qa="js-demo-explorer-data-qa"
  tabindex="0"
>
  <div
    class="controls-Explorer__wrapper"
    tabindex="0"
  >
    <div
      style="display: none;"
      tabindex="0"
    />
    <div
      class="controls-BaseControl controls_list_theme-default controls_toggle_theme-default controls-Explorer__view"
      data-qa="list"
      tabindex="0"
    >
      <div
        class="controls-BaseControl__fakeFocusElem"
        name="fakeFocusElem"
        tabindex="0"
      />
      <style
        data-vdom-ignore="true"
        name="itemActionsOutsideStyle"
      />
      <div
        class="controls-BaseControl__viewContainer controls-BaseControl__View_uniqueId2 controls-GridControl__viewContainer"
        name="viewContainer"
        tabindex="0"
      >
        <div
          class="tw-grid tw-w-full tw-relative controls-Grid controls-Grid_default controls-itemActionsV_menu-hidden"
          data-qa="gridWrapper"
          style="grid-template-columns: 1fr;"
          tabindex="0"
        >
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-top"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-top controls-BaseControl__loadingIndicator__position-top controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_top"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-top"
            data-qa="loading-trigger-top"
            style="top: 1px;"
          />
          <div
            class="tw-contents controls-Grid__itemsContainer controls-BaseControl_showActions_onhover controls-BaseControl_hover_enabled controls-BaseControl__itemsContainer_uniqueId2"
            data-qa="items-container"
          >
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell controls-GridReact__cell-undefined js-controls-GridReact__cell js-controls-Grid__row-cell controls-GridReact__cell__hoverMode_undefined controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-ListView__notEditable tw-relative controls-Grid__row-cell__content_colspaned tw-grow tw-box-border tw-max-w-full tw-min-w-0 controls-padding_left-list_default controls-padding_right-list_default controls-padding_top-grid_s controls-padding_bottom-grid_null controls-GridReact__cell_first controls-GridReact__cell_last controls-Grid__row-cell_breadCrumbsSearch_min_height controls-hover-background-default controls-background-default controls-GridReact__cell_actionsCell tw-cursor-pointer"
                data-qa="cell"
              >
                <div
                  class="controls_breadcrumbs_theme-default controls-BreadCrumbsView controls-Grid__breadCrumbs"
                  tabindex="0"
                >
                  <div
                    class="controls-BreadCrumbsView__wrapper"
                  >
                    <div
                      class="controls-BreadCrumbsView__itemsTemplate"
                      tabindex="0"
                    >
                      <div
                        class="controls-BreadCrumbsView__items"
                      >
                        <div
                          class="controls-BreadCrumbsView__crumb controls-fontsize-xs  controls-BreadCrumbsView__max-width controls-BreadCrumbsView__crumb_color  controls-BreadCrumbsView__crumb_withOverflow controls-BreadCrumbsView__crumb_withOverflow_withoutArrow undefined controls-BreadCrumbsView__max-width controls-BreadCrumbsView__crumb__edge controls-BreadCrumbsView__crumb__left_edge"
                          font-size="xs"
                          tabindex="0"
                        >
                          <div
                            class="controls-BreadCrumbsView__crumb-text-ellipsis"
                          >
                            <span
                              class="controls-BreadCrumbsView__titleWrapper"
                              title="Москва и Московская обл."
                            >
                              <span
                                class="controls-BreadCrumbsView__title  controls-BreadCrumbsView__title_enabled"
                              >
                                <span
                                  class="controls-DecoratorHighlight controls-Grid__breadCrumbs_highlight"
                                >
                                  <span
                                    class="controls-Highlight_highlight"
                                    data-qa="controls-DecoratorHighlight__highlight"
                                  >
                                    Москва и Московская обл.
                                  </span>
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-bottom"
            data-qa="loading-trigger-bottom"
            style="bottom: 1px;"
          />
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-bottom"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-bottom controls-BaseControl__loadingIndicator__position-bottom controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_bottom"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-contents"
        />
        <div
          class="controls__BaseControl__footer"
          tabindex="0"
        />
        <invisible-node
          class="ws-hidden"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
  <div
    tabindex="0"
  />
  <invisible-node
    class="ws-hidden"
    tabindex="-1"
  />
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. При поиске узлы должны сворачиваться, если не задана опция deepReload 2`] = `
Array [
  Array [
    	- searchValue: '' -> 'Москва и Московская обл.',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- viewMode: 'table' -> 'search',
    	- expandedItems: {"from":["1","2","3"]} -> {"to":[]},
    	- hasMoreStorage: {"from":{"1":{"forward":false,"backward":false},"2":{"forward":false,"backward":false},"3":{"forward":false,"backward":false}}} -> {"to":{}},
    	- filter: {"from":{}} -> {"to":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}},
    	- previousViewMode: undefined -> 'table',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/treeGrid:TreeGridCollection' -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- viewCommands: {"from":["resetScroll"]} -> {"to":["resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. При сбросе поиска должны вернуться в узел, с которого начинали поиск 1`] = `
<div
  class="controls_list_theme-default controls-Explorer"
  data-qa="js-demo-explorer-data-qa"
  tabindex="0"
>
  <div
    class="controls-Explorer__wrapper"
    tabindex="0"
  >
    <div
      class="controls-Explorer__HeadingPathWrapper"
      tabindex="0"
    >
      <div
        class="controls-StickyBlock  controls-background-default-sticky controls-Explorer__HeadingPath-undefined"
        style="left: 0px; max-width: calc(100%);"
      >
        <div
          class="controls-Explorer__PathWrapper controls_toggle_theme-default controls-StickyBlock__content"
          tabindex="0"
        >
          <div
            class="controls-BreadCrumbsPath controls_breadcrumbs_theme-default controls-Explorer__Path"
            data-qa="controls-BreadCrumbsPath"
            tabindex="0"
          >
            <div
              class="controls-BreadCrumbsPath__wrapper"
            >
              <div
                class="controls_breadcrumbs_theme-default controls-BreadCrumbsPath__backButton__wrapper controls-BreadCrumbsPath__backButton__wrapper__only"
                data-qa="controls-BreadCrumbsBackButton"
                tabindex="0"
              >
                <div
                  class="controls-BreadCrumbsPath__backButton__container"
                >
                  <div
                    class="controls-Back controls-BreadCrumbsPath__backButton"
                    tabindex="0"
                    title="Москва и Московская обл."
                  >
                    <div
                      class="controls-Back__wrapper controls-Back__wrapper_iconViewMode-default controls-fontsize-headingPathBack"
                    >
                      <div
                        class="controls-Back__icon-wrapper  ws-align-items-center"
                      >
                        <div
                          class="controls-Back__icon_view-default"
                          data-qa="controls-Back_arrow"
                        >
                          <svg
                            class="controls-padding_right-s controls-Explorer__HeadingPath-IconBack-height controls-margin_left-2xs controls-Back__icon_style-primary"
                            style="enable-background: new 0 0 9 20;"
                            tabindex="0"
                            viewBox="0 0 9 20"
                            xml:space="preserve"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M6.87828 3.5L9 5.15195L3.54204 11.5L9 17.848L6.87828 19.5L0 11.5L6.87828 3.5Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="controls-Back__caption controls-Back__caption_style-default controls-Back__caption_overflow-ellipsis"
                      >
                        Москва и Московская обл.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="controls-BaseControl controls_list_theme-default controls_toggle_theme-default controls-Explorer__view"
      data-qa="list"
      tabindex="0"
    >
      <div
        class="controls-BaseControl__fakeFocusElem"
        name="fakeFocusElem"
        tabindex="0"
      />
      <style
        data-vdom-ignore="true"
        name="itemActionsOutsideStyle"
      />
      <div
        class="controls-BaseControl__viewContainer controls-BaseControl__View_uniqueId2 controls-GridControl__viewContainer"
        name="viewContainer"
        tabindex="0"
      >
        <div
          class="tw-grid tw-w-full tw-relative controls-Grid controls-Grid_default controls-itemActionsV_menu-hidden"
          data-qa="gridWrapper"
          style="grid-template-columns: 1fr;"
          tabindex="0"
        >
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-top"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-top controls-BaseControl__loadingIndicator__position-top controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_top"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-top"
            data-qa="loading-trigger-top"
            style="top: 1px;"
          />
          <div
            class="tw-contents controls-Grid__itemsContainer controls-BaseControl_showActions_onhover controls-BaseControl_hover_enabled controls-BaseControl__itemsContainer_uniqueId2"
            data-qa="items-container"
          >
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_1"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-fontsize-treeGrid_node_default controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="js-controls-Tree__row-expander controls-TreeGrid__row-expander controls-cursor_pointer js-controls-ListView__notEditable controls-TreeGrid__row_default-expander_size_default tw-inline-flex tw-items-center tw-flex-shrink-0 tw-justify-center controls-TreeGrid__row-expander_node_default_position_default controls-TreeGrid__row-expander_node_default controls-TreeGrid__row-expander_node_iconSize_default controls-TreeGrid__row-expander_node_iconStyle_default controls-TreeGrid__row-expander_collapsed controls-TreeGrid__row-expander_node_default_collapsed"
                    data-qa="row-expander"
                    tabindex="-1"
                  />
                </div>
                Москва
              </div>
            </div>
            <div
              class=" controls-ListView__itemV controls-GridReact__row tw-contents controls-GridReact__row__hoverMode_row js-controls-Grid__row_editable controls-GridView__item_showActions controls-GridView__item_showActions_row controls-ListView__item_showActions_undefined controls-ListView__item_highlightOnHover"
              data-qa="row"
              item-key="1_2"
              item-parent-key="1"
              tabindex="0"
            >
              <div
                class="controls-GridReact__cell js-controls-GridReact__cell js-controls-Grid__row-cell js-controls-ListView__editingTarget controls-ListView__item_contentWrapper js-controls-ListView__measurableContainer js-controls-GridReact__cell  controls-GridReact__cell-default tw-cursor-pointer controls-GridReact__minHeight-data tw-relative controls-GridReact__cell__hoverMode_row controls-GridReact__cell_actionsCell controls-GridReact__cell_first controls-GridReact__cell_last tw-flex controls-hover-background-default tw-items-baseline controls-GridReact__cell-baseline controls-GridReact__cell-baseline_default controls-padding_top-grid_s controls-padding_bottom-grid_s controls-padding_left-list_default controls-padding_right-list_default"
                data-qa="cell"
              >
                <div
                  class="tw-flex tw-items-baseline "
                  data-qa="expander-block"
                >
                  <div
                    class="controls-Tree__row-expanderPadding tw-flex-shrink-0 tw-invisible controls-TreeGrid__row-expanderPadding_size_default js-controls-ListView__notEditable"
                  />
                </div>
                Абрамцево
              </div>
            </div>
          </div>
          
          <div
            class=" controls-BaseControl__loadingTrigger controls-BaseControl__loadingTrigger-bottom"
            data-qa="loading-trigger-bottom"
            style="bottom: 1px;"
          />
          <div
            class="controls-Grid__loadingIndicator controls-Grid__loadingIndicator-bottom"
            style="display: none;"
          >
            <div
              class="tw-w-full"
            >
              <div
                class="controls-BaseControl__loadingIndicator js-controls-BaseControl__loadingIndicator controls-BaseControl__loadingIndicator-bottom controls-BaseControl__loadingIndicator__position-bottom controls-BaseControl__loadingIndicator__state-loading "
                data-qa="indicator_state_loading_position_bottom"
                style="display: none;"
              >
                <div
                  class="controls-BaseControl__loadingIndicator-content"
                >
                  <div
                    class="controls-BaseControl__loadingIndicatorImage"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-contents"
        />
        <div
          class="controls__BaseControl__footer"
          tabindex="0"
        />
        <invisible-node
          class="ws-hidden"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
  <div
    tabindex="0"
  />
  <invisible-node
    class="ws-hidden"
    tabindex="-1"
  />
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. При сбросе поиска должны вернуться в узел, с которого начинали поиск 2`] = `
Array [
  Array [
    	- searchValue: '' -> 'Москва и Московская обл.',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- viewMode: 'table' -> 'search',
    	- root: '1' -> null,
    	- expandedItems: {"from":[]} -> {"to":[]},
    	- filter: {"from":{}} -> {"to":{"title":"Москва и Московская обл.","parent":null,"searchStartedFromRoot":"1","Разворот":"С разворотом","usePages":"full"}},
    	- breadCrumbsItems: {"from":[{"$serialized$":"inst","module":"Types/entity:Model","id":9,"state":{"$options":{"state":"Unchanged","adapter":{"$serialized$":"inst","module":"Types/entity:adapter.Json","id":10,"state":{"$options":{}}},"rawData":{"key":"1","title":"Москва и Московская обл.","parent":null,"node":true},"keyProperty":"key"},"_changedFields":{},"_instanceId":"client-model-5","_isDeleted":false}}]} -> {"to":null},
    	- backButtonCaption: 'Москва и Московская обл.' -> '',
    	- activeElement: '1_1' -> '1',
    	- previousViewMode: undefined -> 'table',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/treeGrid:TreeGridCollection' -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- viewCommands: {"from":["resetScroll"]} -> {"to":["resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- searchValue: 'Москва и Московская обл.' -> '',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":["resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll"]},
    	- viewMode: 'search' -> 'table',
    	- root: null -> '1',
    	- filter: {"from":{"title":"Москва и Московская обл.","parent":null,"searchStartedFromRoot":"1","Разворот":"С разворотом","usePages":"full"}} -> {"to":{}},
    	- breadCrumbsItems: {"from":null} -> {"to":[{"$serialized$":"inst","module":"Types/entity:Model","id":11,"state":{"$options":{"state":"Unchanged","adapter":{"$serialized$":"inst","module":"Types/entity:adapter.Json","id":12,"state":{"$options":{}}},"rawData":{"key":"1","title":"Москва и Московская обл.","parent":null,"node":true},"keyProperty":"key"},"_changedFields":{},"_instanceId":"client-model-6","_isDeleted":false}}]},
    	- backButtonCaption: '' -> 'Москва и Московская обл.',
    	- activeElement: '1' -> '1_1',
  ],
  Array [
    	- collection: 'Controls/searchBreadcrumbsGrid:SearchGridCollection' -> 'Controls/treeGrid:TreeGridCollection',
    	- searchInputFocused: false -> true,
    	- viewCommands: {"from":["resetScroll","resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Смена корня сбрасывает поиск 1`] = `
<div
  data-qa="js-demo-search-input-data-qa"
>
  <div
    class="controls-Render js-controls-Render  controls-Render_background-same controls-Render_textAlign-left controls-Render_search_borderRadius controls-Render_state-search-valid controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-search-valid_caretEmpty controls-inlineheight-default controls-Render-inlineheight-default  controls-search controls_search_theme-default controls-notFocusOnEnter "
    tabindex="0"
    title=""
  >
    <div
      class="controls-Render__wrapper"
    >
      <span
        class="controls-Render__baseline"
      >
        ﻿
      </span>
      <div
        class="controls_search_theme-default controls-Search__buttons controls-Search__buttons-leftTemplate"
      />
      <div
        class="controls-InputBase__field controls-Search__field_margin-null controls-Search__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
        data-qa="controls-Render__field"
      >
        <input
          autocapitalize="on"
          autocomplete="off"
          class="controls-Field js-controls-Field controls-InputBase__nativeField controls-Search__nativeField_caretEmpty controls-Search__nativeField_caretEmpty_theme_default"
          inputmode="text"
          name="ws-input_2000-01-01"
          spellcheck="true"
          tabindex="0"
          type="text"
          value=""
        />
        <div
          class="controls-InputBase__placeholder controls-InputBase__placeholder_displayed-under-caret"
        >
          <div
            class="controls-Render__placeholder controls-Render__placeholder_overflow"
          >
            Найти
          </div>
        </div>
      </div>
      <div
        class="controls_search_theme-default controls-Search__buttons controls-Search__buttons-rightTemplate"
      >
        <div
          class="controls-Search__button
                            controls-Search__resetButton-invisible
                            controls-Search__button_enabled
                            controls-Search__resetButton
                            controls-Search__resetButton_position
                            controls-Search__resetButton_color icon-Close"
          data-qa="Search__resetButton"
          title="Очистить"
          ws-no-focus="true"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search_Source_Hierarchy. Тесты взаимодействия поиска с сурсом с иерархией. Смена корня сбрасывает поиск 2`] = `
Array [
  Array [
    	- searchValue: '' -> 'Москва и Московская обл.',
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewCommands: {"from":[]} -> {"to":["resetScroll"]},
    	- viewMode: 'table' -> 'search',
    	- expandedItems: {"from":[]} -> {"to":[]},
    	- filter: {"from":{}} -> {"to":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}},
    	- previousViewMode: undefined -> 'table',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/treeGrid:TreeGridCollection' -> 'Controls/searchBreadcrumbsGrid:SearchGridCollection',
    	- viewCommands: {"from":["resetScroll"]} -> {"to":["resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- root: null -> '1',
    	- markedKey: undefined -> null,
    	- listCommandsSelection: {"from":"undefined"} -> {"to":{"selected":[],"excluded":[]}},
    		listCommandsSelection: undefined,
    			listCommandsSelection: {"selected":[],"excluded":[]},
    				listCommandsSelection: {"selected":[],"excluded":[]},
    	- filter: {"from":{"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"}} -> {"to":{}},
    		filter: {"title":"Москва и Московская обл.","parent":null,"Разворот":"С разворотом","usePages":"full"},
    			filter: {},
    				filter: {},
    	- searchValue: 'Москва и Московская обл.' -> '',
    	- searchInputValue: 'Москва и Московская обл.' -> '',
    	- expandedItems: {"from":[]} -> {"to":[]},
    		expandedItems: [],
    			expandedItems: [],
    				expandedItems: [],
    	- loading: false -> false,
    		loading: false,
    			loading: true,
    				loading: false,
    	- viewMode: 'search' -> 'table',
    	- breadCrumbsItems: {"from":null} -> {"to":[{"$serialized$":"inst","module":"Types/entity:Model","id":5,"state":{"$options":{"state":"Unchanged","adapter":{"$serialized$":"inst","module":"Types/entity:adapter.Json","id":6,"state":{"$options":{}}},"rawData":{"key":"1","title":"Москва и Московская обл.","parent":null,"node":true},"keyProperty":"key"},"_changedFields":{},"_instanceId":"client-model-2","_isDeleted":false}}]},
    	- backButtonCaption: '' -> 'Москва и Московская обл.',
    	- activeElement: '1' -> '1_1',
    	- expansionModel: {"from":{}} -> {"to":{}},
  ],
  Array [
    	- collection: 'Controls/searchBreadcrumbsGrid:SearchGridCollection' -> 'Controls/treeGrid:TreeGridCollection',
    	- viewCommands: {"from":["resetScroll","resetScroll"]} -> {"to":["resetScroll","resetScroll","resetScroll"]},
    	- selectionModel: {"from":{}} -> {"to":{}},
  ],
]
`;
